# pythondeps-dmipy

./: Dockerfile  pyproject.toml
.github/workflows/: deploy_docker.yml
