[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
dmipy = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
